2012-08-20  Keishi Hattori  <keishi@webkit.org>

        Clicking input type=range with padding or border sets wrong value
        https://bugs.webkit.org/show_bug.cgi?id=94473

        Reviewed by Kent Tamura.

        * fast/forms/range/range-hit-test-with-padding-expected.txt: Added.
        * fast/forms/range/range-hit-test-with-padding.html: Added.

2012-08-20  MORITA Hajime  <morrita@google.com>

        load event shouldn't fired during node insertion traversals.
        https://bugs.webkit.org/show_bug.cgi?id=94447

        Reviewed by Ryosuke Niwa.

        * fast/frames/iframe-onload-and-domnodeinserted-expected.txt: Added.
        * fast/frames/iframe-onload-and-domnodeinserted.html: Added.

2012-08-20  Shinya Kawanaka  <shinyak@chromium.org>

        ShadowRoot.cloneNode() must always throw a DATA_CLONE_ERR exception.
        https://bugs.webkit.org/show_bug.cgi?id=91704

        Reviewed by Dimitri Glazkov.

        * fast/dom/shadow/shadowroot-clonenode-expected.txt: Added.
        * fast/dom/shadow/shadowroot-clonenode.html: Added.

2012-08-20  Kenneth Russell  <kbr@google.com>

        Unreviewed Chromium gardening. Improved how a few test
        expectations were merged together in r126117.

        * platform/chromium/TestExpectations:

2012-08-20  Tom Sepez  <tsepez@chromium.org>

        XSSAuditor too tolerant of injected data: URLs from other "hostless" schemes.
        https://bugs.webkit.org/show_bug.cgi?id=94547

        Reviewed by Adam Barth.

        * fast/frames/resources/static-xss-vector.html: Added.
        * fast/frames/xss-auditor-handles-file-urls-expected.txt: Added.
        * fast/frames/xss-auditor-handles-file-urls.html: Added.

2012-08-20  Luke Macpherson   <macpherson@chromium.org>

        Fix inspector with variables enabled and enable inspector variables tests by default.
        https://bugs.webkit.org/show_bug.cgi?id=94296

        Reviewed by Hajime Morita.
